[FIX]  Competition Search Pagination